--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" type="image/png" sizes="1000x1000" href="favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Un Mcadory</title>
@@ -21,7 +24,7 @@
   </div>
   <!-- Background video -->
   <div class="video-container">
-    <video autoplay muted loop playsinline>
+    <video autoplay muted loop preload="metadata" playsinline>
       <source src="video.mp4" type="video/mp4">
     </video>
     <div class="video-overlay"></div>
