--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Un Mcadory</title>
+  <title>Un McAdory</title>
 
   <!-- DM Serif Display (Google Font) -->
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
@@ -125,3 +125,4 @@
 </body>
 
 </html>
+
