--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="featured-container">
       <p class="featured-label">FEATURED</p>
       <h2 class="featured-title">WITH OVER $430+ MILLION IN<br>MARYLAND HOME SALES</h2>
-      <p class="featured-description">Personalized support for buyers, from first showing through closing.</p>
+      <p class="featured-description">Trusted, personalized representation for buyers and sellers, from first showing and far beyond closing.</p>
 
       <div class="stats-grid">
         <div class="stat-item">
@@ -125,4 +125,3 @@
 </body>
 
 </html>
-
