--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Un McAdory</title>
+  <meta name="description" content="Un McAdory - Maryland-based realtor" />
+  <title>Un McAdory | Maryland Realtor</title>
 
   <!-- DM Serif Display (Google Font) -->
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
@@ -15,6 +16,30 @@
   <!-- Albert Sans (Google Font) -->
   <link href="https://fonts.googleapis.com/css2?family=Albert+Sans" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Un McAdory",
+  "url": "https://unmcadory.com",
+  "jobTitle": "Realtor",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Realty 1 Maryland LLC"
+  },
+  "address": {
+    "@type": "PostalAddress",
+    "addressRegion": "MD",
+    "addressCountry": "US"
+  },
+  "sameAs": [
+    "https://www.zillow.com/profile/unmcadory",
+    "https://www.realtor.com/realestateagents/5a05eb2a041eb900100d2ce0",
+    "https://www.facebook.com/un.mcadory.7",
+    "https://www.instagram.com/unmcadory/"
+  ]
+}
+</script>
 </head>
 
 <body>
@@ -56,7 +81,8 @@
     <div class="featured-container">
       <p class="featured-label">FEATURED</p>
       <h2 class="featured-title">WITH OVER $430+ MILLION IN<br>MARYLAND HOME SALES</h2>
-      <p class="featured-description">Trusted, personalized representation for buyers and sellers, from first showing and far beyond closing.</p>
+      <p class="featured-description">Trusted, personalized representation for buyers and sellers, from first showing
+        and far beyond closing.</p>
 
       <div class="stats-grid">
         <div class="stat-item">
@@ -105,8 +131,10 @@
 
         <!-- Social Media -->
         <div class="footer-social">
-          <a href="https://www.instagram.com/unmcadory/" target="_blank" class="social-icon"><img src="instagramlogo.svg" alt="Instagram"></a>
-          <a href="https://www.facebook.com/un.mcadory.7" target="_blank" class="social-icon"><img src="facebooklogo.svg" alt="Facebook"></a>
+          <a href="https://www.instagram.com/unmcadory/" target="_blank" class="social-icon"><img
+              src="instagramlogo.svg" alt="Instagram"></a>
+          <a href="https://www.facebook.com/un.mcadory.7" target="_blank" class="social-icon"><img
+              src="facebooklogo.svg" alt="Facebook"></a>
         </div>
       </div>
 
@@ -117,8 +145,8 @@
 
       <!-- Bottom Bar -->
       <div class="footer-bottom">
-          <span>Built by Nathaniel Shin</span>
-          <span>Copyright © 2025</span>
+        <span>Built by Nathaniel Shin</span>
+        <span>Copyright © 2025</span>
       </div>
     </div>
   </footer>
