--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
       <div class="box-container">
         <h1 class="box-title">EXPERIENCE, REFINED</h1>
         <p class="box-subtitle">Decades of experience. Relationships that last. Results that speak.</p>
-        <button onclick="window.open('mailto:admin@unmcadory.com', '_blank')" class="box-button">CONTACT</button>
+        <button onclick="window.open('mailto:admin@unmcadory.com', '_blank')" class="box-button">
+          <span class="default-button">CONTACT</span>
+          <span class="hover-button">admin@unmcadory.com</span>
+        </button>
       </div>
     </div>
   </main>
@@ -135,6 +138,8 @@
               src="instagramlogo.svg" alt="Instagram"></a>
           <a href="https://www.facebook.com/un.mcadory.7" target="_blank" class="social-icon"><img
               src="facebooklogo.svg" alt="Facebook"></a>
+          <a href="https://www.linkedin.com/in/un-mcadory/" target="_blank" class="social-icon"><img
+              src="linkedinlogo.svg" alt="LinkedIn"></a>
         </div>
       </div>
 
